--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.5.0",
     "express": "^4.18.2",
-    "jest": "^29.6.2"
+    "jest": "^29.6.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
