--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "1.0.0",
   "description": "Mission 1 - Buying Experience Re-design at Turners Car Insurance",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "jest",
+    "start": "tsnd server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.5.0",
+    "jest": "^29.6.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.5.0",
-    "express": "^4.18.2",
-    "jest": "^29.6.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "express": "^4.18.2"
   }
 }
