--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "Mission 1 - Buying Experience Re-design at Turners Car Insurance",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "jest": "^29.6.2"
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.5.0",
+    "express": "^4.18.2"
   }
 }
